<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:shortcutId="login"
        android:shortcutLongLabel="@string/shortcut_login"
        android:shortcutShortLabel="@string/shortcut_login">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://clearbookdata.in/login?mode=login"
            android:targetClass="app.clearbookdata.ledger.ClearbookLaunchActivity"
            android:targetPackage="app.clearbookdata.ledger" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:shortcutId="transactions"
        android:shortcutLongLabel="@string/shortcut_ledger"
        android:shortcutShortLabel="@string/shortcut_ledger">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://clearbookdata.in/transactions"
            android:targetClass="app.clearbookdata.ledger.ClearbookLaunchActivity"
            android:targetPackage="app.clearbookdata.ledger" />
    </shortcut>
    <shortcut
        android:enabled="true"
        android:shortcutId="export"
        android:shortcutLongLabel="@string/shortcut_export"
        android:shortcutShortLabel="@string/shortcut_export">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://clearbookdata.in/settings"
            android:targetClass="app.clearbookdata.ledger.ClearbookLaunchActivity"
            android:targetPackage="app.clearbookdata.ledger" />
    </shortcut>
</shortcuts>
